--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JAVASCRIPT BASICS</title>
 </head>
 <body>
-    <h1>hello</h1>
+   <h1>JAVASCRIPT BASICS</h1>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
-
-
